Add logo scale at the center.
